log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Tue 28 Mar 2023 02:52:38 AM UTC: 
 tests:  0|6
total_score: 0/70
ef4a4af
Wed 29 Mar 2023 11:14:19 PM UTC: 
 arraylist.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4869b64
Wed 29 Mar 2023 11:14:37 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
877c577
Thu 30 Mar 2023 12:50:55 AM UTC: 
 arraylist.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|4
total_score: 20/70
76ef5de
Thu 30 Mar 2023 05:35:52 PM UTC: 
 arraylist.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:45:20: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   45 |             for(;u<size;u++){
      |                    ^~~~
      |                    dysize
arraylist.c:45:20: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5433fc5
Thu 30 Mar 2023 05:36:03 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
ba7bbaa
Thu 30 Mar 2023 05:37:17 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
a608f64
Thu 30 Mar 2023 05:38:04 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|4
total_score: 20/70
e642197
Thu 30 Mar 2023 05:38:27 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
e81878f
Thu 30 Mar 2023 05:40:02 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9985362
Thu 30 Mar 2023 05:41:51 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
f56b559
Thu 30 Mar 2023 05:42:34 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
15d78a2
Thu 30 Mar 2023 05:45:17 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
a34ea9f
Thu 30 Mar 2023 05:47:26 PM UTC: 
 arraylist.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  3|4
total_score: 20/70
72b6fb2
Thu 30 Mar 2023 05:47:55 PM UTC: 
 arraylist.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  5|3
total_score: 30/70
d916886
Thu 30 Mar 2023 05:48:30 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 30/70
f7d22d6
Thu 30 Mar 2023 05:50:35 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
d8a850a
Thu 30 Mar 2023 05:51:27 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
4a58581
Thu 30 Mar 2023 05:51:36 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
d7892c7
Thu 30 Mar 2023 05:52:24 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
f540688
Thu 30 Mar 2023 05:58:51 PM UTC: 
 arraylist.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  5|3
total_score: 30/70
1c73712
Thu 30 Mar 2023 06:14:39 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 30/70
c8190e5
Thu 30 Mar 2023 06:15:10 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1a0cb95
Thu 30 Mar 2023 06:21:41 PM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  8|2
total_score: 40/70
31f1e94
Thu 30 Mar 2023 06:26:35 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
aaf89d0
Thu 30 Mar 2023 06:28:19 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
3b59483
Thu 30 Mar 2023 06:47:14 PM UTC: 
 arraylist.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  0|0
d239638
Thu 30 Mar 2023 06:47:52 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9f29985
Thu 30 Mar 2023 06:49:08 PM UTC: 
 arraylist.c | 14 +++-----------
 1 file changed, 3 insertions(+), 11 deletions(-)
 tests:  8|2
total_score: 40/70
01e6f8d
Thu 30 Mar 2023 06:51:16 PM UTC: 
 arraylist.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  8|2
total_score: 40/70
c6d5795
Thu 30 Mar 2023 06:51:37 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
cefca7a
Thu 30 Mar 2023 06:53:58 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|2
total_score: 40/70
b51773f
Thu 30 Mar 2023 07:02:27 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 50/70
8c43655
Thu 30 Mar 2023 07:03:39 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 50/70
ed5d8b5
